# snpkit

./: .gitignore  MANIFEST.in  README.md  environment.yml  pyproject.toml  setup.py
snpkit/: __init__.py  io.py  mxbkit.py  snpkit.py  ukbkit.py
snpkit/io/: __init__.py  msp_reader.py
snpkit/src/: decl.hpp  io.cpp  snpkit_core.cpp
snpkit/src/include/snpkit_core/: core.hpp
snpkit/src/include/snpkit_core/io/: msp_reader.hpp
snpkit/src/include/snpkit_core/util/: types.hpp
tests/: test_core.py  test_io.py
